# pyru

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  conventional_commits.yml  release-drafter.yml  release.yml  scorecard.yml  stale.yml
_build/: __init__.py  build_backend.py
benchmarks/: competitor.py  http_server.py  real_world_benchmark.py
native/: Cargo.toml
native/src/: lib.rs
pyru/: __init__.py  __main__.py  _native.pyi  cli.py
python/pyru/: __init__.py  _native.pyi  cli.py
rust_scraper/: Cargo.toml  deny.toml
rust_scraper/src/: lib.rs
tests/: __init__.py  test_cli.py
