[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pyweb-scraper"
version = "1.0.0"
description = "PyRu — a high-throughput, low-latency Python web scraper CLI powered by an async Rust core."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Andreas Faulhaber", email = "afadesign.official@gmail.com" },
]
keywords = [
    "async",
    "cli",
    "crawler",
    "pyo3",
    "rust",
    "scraper",
    "scraping",
    "web",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1,<9",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.7,<2",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]
benchmarks = [
    "aiohttp>=3.10",
    "httpx>=0.27",
    "numpy>=2.0",
    "selectolax>=0.3.21",
]

[project.urls]
Homepage = "https://github.com/afadesigns/pyru"
Repository = "https://github.com/afadesigns/pyru"
Issues = "https://github.com/afadesigns/pyru/issues"

[project.scripts]
pyru = "pyru.cli:cli"

[tool.maturin]
manifest-path = "rust_scraper/Cargo.toml"
python-source = "python"
module-name = "pyru._native"
features = ["extension-module"]
strip = true

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["rust_scraper/target"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "SIM", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S603", "S607"]
"benchmarks/**" = ["S603", "S607", "T201"]

[tool.mypy]
python_version = "3.9"
strict = true
files = ["python/pyru", "tests"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pyru._native"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
