[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["_build"]

[project]
name = "pyru-scraper"
version = "1.0.0"
description = "PyRu — a high-throughput, low-latency Python web scraper CLI powered by an async Rust core."
readme = "README.md"
requires-python = ">=3.15.0a8"
license = { file = "LICENSE" }
authors = [
    { name = "Andreas Fahl", email = "afadesign.official@gmail.com" },
]
keywords = [
    "async",
    "cli",
    "crawler",
    "pyo3",
    "rust",
    "scraper",
    "scraping",
    "web",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/afadesigns/pyru"
Repository = "https://github.com/afadesigns/pyru"
Issues = "https://github.com/afadesigns/pyru/issues"

[project.scripts]
pyru = "pyru.cli:cli"

[dependency-groups]
dev = ["ruff>=0.8", "ty>=0.0.31"]
benchmarks = [
    "aiohttp>=3.11",
    "httpx>=0.28",
    "numpy>=2.0",
    "selectolax>=0.3.25",
]

[tool.uv]
required-version = ">=0.11"
resolution = "highest"
prerelease = "allow"
default-groups = ["dev"]

[tool.ruff]
line-length = 100
fix = false
target-version = "py315"
unsafe-fixes = false

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "COM812",  # conflicts with ruff format
    "ISC001",  # conflicts with ruff format
    "D203",    # incompatible with D211
    "D213",    # incompatible with D212
    "T201",    # print() is the CLI's output mechanism
    "CPY001",  # no copyright banner required
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Dict".msg = "Use `dict[K, V]` (PEP 585)."
"typing.FrozenSet".msg = "Use `frozenset[T]` (PEP 585)."
"typing.List".msg = "Use `list[T]` (PEP 585)."
"typing.Optional".msg = "Use `T | None` (PEP 604)."
"typing.Set".msg = "Use `set[T]` (PEP 585)."
"typing.Tuple".msg = "Use `tuple[...]` (PEP 585)."
"typing.Type".msg = "Use `type[T]` (PEP 585)."
"typing.Union".msg = "Use `X | Y` (PEP 604)."

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 12
max-locals = 15
max-positional-args = 5
max-returns = 6
max-statements = 40

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["pyru"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
ignore-fully-untyped = false
mypy-init-return = false
suppress-dummy-args = false
suppress-none-returning = false

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN",
    "D",
    "INP001",
    "PLR2004",
    "PLR6301",  # unittest methods legitimately bind to self
    "PT",       # we intentionally use stdlib unittest, not pytest
    "S101",
]
"benchmarks/**" = [
    "D",
    "INP001",
    "S404",
    "S603",
    "S607",
    "T201",
]
"_build/**" = [
    "INP001",   # build backend is not meant as an importable namespace
    "S404",
    "S603",
    "S607",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ty.environment]
python-version = "3.15"

[tool.ty.src]
include = ["pyru", "tests", "_build"]

[tool.ty.rules]
all = "error"
deprecated = "error"
invalid-argument-type = "error"
invalid-exception-caught = "error"
invalid-return-type = "error"
missing-argument = "error"
possibly-unresolved-reference = "error"
redundant-cast = "error"
unresolved-attribute = "error"
unresolved-import = "error"
unresolved-reference = "error"
unused-ignore-comment = "error"

[tool.ty.terminal]
error-on-warning = true
output-format = "full"
