[package]
name = "pyru_native"
version = "1.0.0"
edition = "2021"
rust-version = "1.82"
description = "Native Rust core for the pyru / pyweb-scraper Python CLI"
license = "MIT"
publish = false

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.28", features = ["abi3-py39"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
tokio = { version = "1.48", default-features = false, features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
reqwest = { version = "0.13", default-features = false, features = [
    "brotli",
    "charset",
    "gzip",
    "http2",
    "rustls",
    "webpki-roots",
    "zstd",
] }
scraper = "0.26"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
mimalloc = { version = "0.1.48", default-features = false }

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.bench]
inherits = "release"
